# myPong

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  myPong.pro  setup.bash
include/: ball.h  center_line.h  collision_detector.h  court_scene.h  endgame_scene.h  game.h  goal.h  paddle.h  register_scene.h  scene.h  score_indicator.h  sqlitedatabase.h  userinfo.h  wall.h  welcome_scene.h  welcome_scene.h0
src/: ball.cpp  center_line.cpp  collision_detector.cpp  court_scene.cpp  endgame_scene.cpp  game.cpp  goal.cpp  main.cpp  paddle.cpp  register_scene.cpp  score_indicator.cpp  wall.cpp  welcome_scene.cpp  welcome_scene.cpp0
tests/mouse_kb/: CMakeLists.txt  main.cpp
tests/sqlite3/: CMakeLists.txt
tests/sqlite3/include/: sqlitedatabase.h  userinfo.h
tests/sqlite3/src/: main.cpp
tests/testInput/: CMakeLists.txt  main.cpp
